<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UTooLCoreActivity!</string>
    <string name="app_name">UTooL Core</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_options">Options</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_networking">Networking</string>
    <string name="title_activity_plugin_selection">PluginSelection</string>
    <string name="plugin_selection_header">Choose a Type</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_host_tournament">HostTournamentActivity</string>
    <string name="title_activity_player_management">PlayerManagementActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_profile_management">ProfileManagementActivity</string>
    <string name="title_activity_resume_tournament">ResumeTournamentActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_connect_as">Connect As Player</string>
    <string name="playerManagementTitle">Player Management</string>
    <string name="addButtonText">Add Player</string>
    <string name="cameraButtonText">Start Camera</string>
    <string name="removeButtonText">Remove Player</string>
    <string name="profileImageText">Player Picture</string>
    <string name="profileManagementTitle">Profiles</string>
    <string name="addProfileText">Add Profile</string>
    <string name="title_activity_wifi_direct">WiFiDirectActivity</string>
    <string name="title_activity_dummy">DummyMainActivity</string>
    <string name="utool_long">Universal Tournament Organization Tool</string>
    <string name="profileName">Profile Name</string>
    <string name="profilePortrait">Profile Portrait</string>
    <string name="nameEntry">Name:</string>
    <string name="portraitEntry">Portrait:</string>
    <string name="save">Save</string>
    <string name="menu_add">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_help">Help</string>
    <string name="context_select">Select</string>
    <string name="context_delete">Delete</string>
    <string name="context_edit">Edit</string>
    <string name="profile_creation_help">Please enter your name and choose a picture for your profile. A profile is required to use this application. This is how other users will see you.</string>
    <string name="TournamentConfigurationTitle">Configuration</string>
    <string name="tournamentNameLabel">Tournament Name:</string>
    <string name="tournamentTypeLabel">Type:</string>
    <string name="tournamentNameHint">Tournament 1</string>
    <string name="playerNameHint">Player 1</string>
    <string name="playerPortrait">Player Portrait</string>
    <string name="cameraButton">Camera</string>
    <string name="menu_direct_connect">Direct Connect</string>
    <string name="create">Create Tournament</string>
    <string name="num_players_registered_label">Registered Players:</string>

    <string-array name="config_help_default">
        <item>UTooL Plugin</item>
    </string-array>

</resources>