<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <TextView
        android:id="@+id/tournamentConfigurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/TournamentConfigurationTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/utool_long_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tournamentConfigurationTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/utool_long"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#595959" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="2sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/utool_long_title"
        android:progress="100" />


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/progressBar1"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/tournamentNameLabel"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/progressBar1"
        android:layout_toRightOf="@+id/nameTextView"
        android:ems="10"
        android:hint="@string/tournamentNameHint"
        android:inputType="textPersonName" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="2sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nameTextField"
        android:progress="100" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />



    <Spinner
        android:id="@+id/pluginSelectionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_above="@+id/saveButton"
        android:layout_alignLeft="@+id/tournamentConfigurationTitle"
        android:layout_alignParentRight="true" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="2sp"
        android:layout_above="@+id/pluginSelectionSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:progress="100" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pluginSelectionSpinner"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/addButtonText" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pluginSelectionSpinner"
        android:layout_toLeftOf="@+id/addButton"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/cameraButton" />


    <ImageView
        android:id="@+id/playerPortrait"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar3"
        android:layout_alignTop="@+id/cameraButton"
        android:layout_toLeftOf="@+id/cameraButton"
        android:src="@drawable/silhouette"
        android:contentDescription="@string/playerPortrait" />

    <EditText
        android:id="@+id/playerNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerPortrait"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/playerPortrait"
        android:ems="10"
        android:hint="@string/playerNameHint"
        android:inputType="textPersonName" />


    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="2sp"
        android:layout_above="@+id/playerPortrait"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:progress="100" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_below="@+id/progressBar2"
        android:layout_above="@+id/progressBar4">
    </ListView>




    <TextView
        android:id="@+id/tournamentTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pluginSelectionSpinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playerNameField"
        android:layout_toLeftOf="@+id/pluginSelectionSpinner"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/tournamentTypeLabel"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>