<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="36sp"
        android:layout_weight="0.625"
        android:contentDescription="@string/profileName"
        android:longClickable="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="36sp"
        android:layout_weight="0.125"
        android:contentDescription="@string/profilePortrait"
        android:gravity="center"
        android:src="@android:drawable/ic_menu_camera"
        android:longClickable="true" />

    <ImageView
        android:id="@+id/playerPortrait"
        android:layout_width="0dp"
        android:layout_height="36sp"
        android:layout_weight="0.125"
        android:contentDescription="@string/profilePortrait"
        android:gravity="center"
        android:longClickable="true" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="36sp"
        android:layout_gravity="top"
        android:layout_margin="0dp"
        android:layout_weight="0.125"
        android:src="@android:drawable/ic_menu_save"
        android:contentDescription="@string/save" />

</LinearLayout>