<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is the tournament configuration screen. You will use this screen whenever you want to create or modify a tournament."
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="Creating a tournament"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="The following four steps will walk you through how to make your first tournament. When you are done, the tournament will be created for people to join. You can view your tournament from the home screen."
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="1."
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set the name of your tournament"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="@string/tournamentNameLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="My Tournament" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="2."
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select players to play in your tournament"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.625"
                    android:contentDescription="@string/profileName"
                    android:longClickable="true"
                    android:singleLine="true"
                    android:text="Selected"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ff00ff00"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.125"
                    android:contentDescription="@string/profilePortrait"
                    android:gravity="center"
                    android:longClickable="true" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.125"
                    android:contentDescription="@string/profilePortrait"
                    android:gravity="center"
                    android:longClickable="true"
                    android:src="@drawable/silhouette" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_gravity="top"
                    android:layout_margin="0dp"
                    android:layout_weight="0.125"
                    android:checked="true"
                    android:clickable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.625"
                    android:contentDescription="@string/profileName"
                    android:longClickable="true"
                    android:singleLine="true"
                    android:text="Unselected"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ff00ff00"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.125"
                    android:contentDescription="@string/profilePortrait"
                    android:gravity="center"
                    android:longClickable="true" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_weight="0.125"
                    android:contentDescription="@string/profilePortrait"
                    android:gravity="center"
                    android:longClickable="true"
                    android:src="@drawable/silhouette" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="36sp"
                    android:layout_gravity="top"
                    android:layout_margin="0dp"
                    android:layout_weight="0.125"
                    android:checked="false"
                    android:clickable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="3."
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select the type of tournament you want to run"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="@string/tournamentTypeLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/pluginSelectionSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:clickable="false"
                    android:entries="@array/config_help_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="4."
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="When everything is the way you want it, press create tournament."
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="Adding New Players"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="If there is a player you want to add that isn&apos;t in the list, you can add them from this screen. Enter their name into the add player line, choose a portrait for them, and then press the green plus button to add them to your tournament."
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <EditText
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="New Player" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/playerPortrait"
                    android:src="@drawable/silhouette" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:contentDescription="@string/cameraButton"
                    android:src="@android:drawable/ic_menu_camera" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:contentDescription="@string/addButtonText"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="Color Coding"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="You might have noticed the players in the list have different colors. These each have a different meaning, detailed below:"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="Profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ff00ffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is the color given to your currently selected profile"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="Profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFF7F24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is the color given to other profiles saved on your device"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="Player"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ff00ff00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is the color given to players you have had in your tournament in the past"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:text="Player"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is the color given to players you have added using the edit line"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/help_close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Close" />

</LinearLayout>